Name:                indexed
Version:             0.1.1
Synopsis:            Haskell98 indexed functors, monads, comonads
Description:         Haskell98 indexed functors, monads, comonads
License:             BSD3
License-file:        LICENSE
Author:              Edward A. Kmett
Maintainer:          Reiner Pope <reiner.pope@gmail.com>
Copyright:           
    Copyright (C) 2012 Reiner Pope,
    Copyright (C) 2008 Edward A. Kmett, 
    Copyright (C) 2004--2008 Dave Menendez, 
    Copyright (C) 2007 Iavor Diatchki
Category:            Control
Build-type:          Simple
Cabal-version:       >=1.6
homepage:            https://github.com/reinerp/indexed
bug-reports:         https://github.com/reinerp/indexed/issues

source-repository head
  type:                 git
  location:             git://github.com/reinerp/indexed.git

Library
  Exposed-modules:     
    Data.Functor.Indexed, 
    Control.Monad.Indexed, 
    Control.Monad.Indexed.Fix, 
    Control.Monad.Indexed.Trans
    Control.Comonad.Indexed
 if impl(ghc >= 7.5)
   default-extensions: PolyKinds
 Build-depends:
    base < 5
 ghc-options:
    -Wall

